force-app/main/default/objects/MigrationBatch__c/MigrationBatch__c.object-meta.xml
<CustomObject>
    <description>Individual 200-row batch execution record. Primary source for progress dashboard counters and the checkpoint resume system.</description>
    <label>Migration Batch</label>
    <nameField>
        <displayFormat>BATCH-{000000}</displayFormat>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>