force-app/main/default/objects/MigrationBatch__c/fields/ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>ApexJobId__c</fullName>
    <description>AsyncApexJob.Id of the Queueable or Batchable that processed this batch. Used for diagnostic queries against AsyncApexJob.</description>
    <label>Apex Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>