force-app/main/default/objects/MigrationBatch__c/fields/AttemptedCount__c.field-meta.xml
<CustomField>
    <fullName>AttemptedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of rows passed to the DML call. Zero in dry-run mode (validation only, no DML).</description>
    <label>Attempted Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>