force-app/main/default/objects/MigrationBatch__c/fields/BatchError__c.field-meta.xml
<CustomField>
    <fullName>BatchError__c</fullName>
    <description>Job-level or framework-level error for this batch (e.g. governor limit exceeded, unhandled exception). Distinct from row-level errors which are in MigrationRowError__c.</description>
    <label>Batch Error</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>