force-app/main/default/objects/MigrationBatch__c/fields/BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>BatchNumber__c</fullName>
    <description>1-based sequence number of this batch within its parent object config. Batch 1 processes rows 1–200, Batch 2 processes rows 201–400, etc.</description>
    <label>Batch Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>