force-app/main/default/objects/MigrationBatch__c/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <description>Number of source rows included in this batch's PayloadJson__c. Set at batch-creation time; used by the ETA calculator for throughput estimation.</description>
    <label>Batch Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>