force-app/main/default/objects/MigrationBatch__c/fields/DurationSeconds__c.field-meta.xml
<CustomField>
    <fullName>DurationSeconds__c</fullName>
    <description>Wall-clock time for this batch in seconds. Salesforce stores DateTime differences in days; multiplying by 86400 converts to seconds.</description>
    <formula>IF(AND(NOT(ISNULL(CompletedAt__c)), NOT(ISNULL(StartedAt__c))), (CompletedAt__c - StartedAt__c) * 86400, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Seconds)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>