force-app/main/default/objects/MigrationBatch__c/fields/FailureCount__c.field-meta.xml
<CustomField>
    <fullName>FailureCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rows where Database.SaveResult.isSuccess() returned false. Each failure has a corresponding MigrationRowError__c with Phase=DML.</description>
    <label>Failure Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>