force-app/main/default/objects/MigrationBatch__c/fields/GlobalBatchSequence__c.field-meta.xml
<CustomField>
    <fullName>GlobalBatchSequence__c</fullName>
    <description>Monotonically increasing sequence across all objects in the job. Used as the primary resume cursor — batches with GlobalBatchSequence &lt;= LastCompletedBatchSequence on the job are skipped on restart.</description>
    <label>Global Batch Sequence</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>