force-app/main/default/objects/MigrationBatch__c/fields/IsCheckpoint__c.field-meta.xml
<CustomField>
    <fullName>IsCheckpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True on the most recently committed batch. When a job restarts, the engine queries for the batch where IsCheckpoint=true to determine the resume point. Only one batch per job should have this set at any time.</description>
    <label>Is Checkpoint</label>
    <type>Checkbox</type>
</CustomField>