force-app/main/default/objects/MigrationBatch__c/fields/IsSecondPass__c.field-meta.xml
<CustomField>
    <fullName>IsSecondPass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True for batches that perform the self-referential field backfill (pass 2 of the two-pass strategy). These batches run Database.update only and populate the self-reference lookup using completed MigrationRecordLog entries.</description>
    <label>Is Second Pass</label>
    <type>Checkbox</type>
</CustomField>