force-app/main/default/objects/MigrationBatch__c/fields/MigrationJob__c.field-meta.xml
<CustomField>
    <fullName>MigrationJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denormalized reference to the parent job. Enables dashboard and checkpoint queries without traversing the MigrationObjectConfig relationship.</description>
    <label>Migration Job</label>
    <referenceTo>MigrationJob__c</referenceTo>
    <relationshipLabel>Migration Batches</relationshipLabel>
    <relationshipName>MigrationBatchesJob</relationshipName>
    <type>Lookup</type>
</CustomField>