force-app/main/default/objects/MigrationBatch__c/fields/MigrationObjectConfig__c.field-meta.xml
<CustomField>
    <fullName>MigrationObjectConfig__c</fullName>
    <label>Migration Object Config</label>
    <referenceTo>MigrationObjectConfig__c</referenceTo>
    <relationshipLabel>Migration Batches</relationshipLabel>
    <relationshipName>MigrationBatches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>