force-app/main/default/objects/MigrationBatch__c/fields/PayloadJson__c.field-meta.xml
<CustomField>
    <fullName>PayloadJson__c</fullName>
    <description>JSON-serialized array of source row maps (List&lt;Map&lt;String,Object&gt;&gt;) for this batch. Read by MigrationBatchExecutor at execution time. Max 131,072 characters covers ~200 rows of typical CRM data.</description>
    <label>Payload JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>