force-app/main/default/objects/MigrationBatch__c/fields/PreValidationErrorCount__c.field-meta.xml
<CustomField>
    <fullName>PreValidationErrorCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rows rejected by the validation engine before DML. Each rejection has a corresponding MigrationRowError__c with Phase=PreValidation.</description>
    <label>Pre-Validation Error Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>