force-app/main/default/objects/MigrationBatch__c/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times this specific batch has been retried after a failure. The engine halts retries when this exceeds MigrationFrameworkConfig__mdt.MaxRetryCount.</description>
    <label>Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>