force-app/main/default/objects/MigrationBatch__c/fields/SourceRowEnd__c.field-meta.xml
<CustomField>
    <fullName>SourceRowEnd__c</fullName>
    <description>0-based inclusive offset of the last row in this batch. SourceRowEnd - SourceRowStart + 1 = AttemptedCount (before pre-validation exclusions).</description>
    <label>Source Row End</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>