force-app/main/default/objects/MigrationBatch__c/fields/SourceRowStart__c.field-meta.xml
<CustomField>
    <fullName>SourceRowStart__c</fullName>
    <description>0-based offset of the first row in this batch within the full source dataset for this object.</description>
    <label>Source Row Start</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>