force-app/main/default/objects/MigrationBatch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Running</fullName><default>false</default><label>Running</label></value>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>PartialSuccess</fullName><default>false</default><label>Partial Success</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Skipped</fullName><default>false</default><label>Skipped</label></value>
            <value><fullName>RolledBack</fullName><default>false</default><label>Rolled Back</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>