force-app/main/default/objects/MigrationBatch__c/fields/SuccessCount__c.field-meta.xml
<CustomField>
    <fullName>SuccessCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rows where Database.SaveResult.isSuccess() returned true. These rows have corresponding MigrationRecordLog__c entries.</description>
    <label>Success Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>